--- a/src/templates/invite_member_email.html
+++ b/src/templates/invite_member_email.html
@@ -26,7 +26,7 @@
     >
       <div>
         <img
-          src="https://static.medmetro-th.com/med-metro-mail-logo.png"
+          src="{{company_logo}}"
           alt="Medmetro Logo"
           style="width: 180px; margin: 0 auto 1rem; display: block"
         />
@@ -53,7 +53,7 @@
           href="{{frontend_path}}?ref-code={{ref_code}}"
           style="
             display: inline-block;
-            background-color: #ab8c72;
+            background-color: {{base_color}};
             color: #ffffff;
             padding: 0.5rem 1rem;
             border-radius: 0.375rem;
