--- a/src/templates/reset_password_email.html
+++ b/src/templates/reset_password_email.html
@@ -27,7 +27,7 @@
       <div>
         <img
           src="{{company_logo}}"
-          alt="Medmetro Logo"
+          alt="{{company_name}}"
           style="width: 180px; margin: 0 auto 1rem; display: block"
         />
       </div>
@@ -73,7 +73,7 @@
       <p style="margin-bottom: 1rem; color: #4a5568">
         Best regards,
         <br />
-        <strong>Medmetro Support</strong>
+        <strong>{{company_name}}</strong>
       </p>
       <div
         style="
@@ -85,7 +85,7 @@
           color: #a0aec0;
         "
       >
-        <p>&copy; 2024 Medmetro. All rights reserved.</p>
+        <p>&copy; 2025 {{company_name}}. All rights reserved.</p>
       </div>
     </div>
   </body>
