--- a/src/templates/invite_member_email.html
+++ b/src/templates/invite_member_email.html
@@ -50,7 +50,7 @@
       </p>
       <div style="text-align: center">
         <a
-          href="{{frontend_path}}?ref-code={{ref_code}}"
+          href="{{frontend_path}}?ref_code={{ref_code}}"
           style="
             display: inline-block;
             background-color: {{base_color}};
